--- a/TicTacToe/TicTacToe/wwwroot/index.html
+++ b/TicTacToe/TicTacToe/wwwroot/index.html
@@ -10,7 +10,14 @@
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>Loading...</app>
+    <!--<app>Loading...</app>-->
+    <app>
+        <div class="loading">
+            <h1>Loading...</h1>
+            <h1>Please wait.</h1>
+            <div class="spinner"></div>
+        </div>
+    </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
 </body>
