Add debugging and fix minor issues with engine

--- a/TicTacToe/TicTacToe/wwwroot/index.html
+++ b/TicTacToe/TicTacToe/wwwroot/index.html
@@ -20,5 +20,8 @@
     </app>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        window.log = (msg) => { console.log(msg); return true; }
+    </script>
 </body>
 </html>
